--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -78,8 +78,8 @@ Graphics to Implement:
 Current tasks:
     - Add prologue sequence with placeholder graphics from Hillary.
 
-    Blocking Next Release:
-        - Render map fog after all sections+objects are rendered so that objects are never drawn on top of the fog.
+    - Golem hands should move over lower solid objects.
+    - Golem hands should break rocks when punching.
 
     - Add new crystal pit graphics
         - Add small crystal pit tile, use in secret entrance to sky palace.
