Fix SFX did not schedule into the future correctly.

--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -61,6 +61,11 @@ Graphics to Implement:
     Add damage effect for player hurt? (alttp doesn't have anything like this)
 
 Current tasks:
+    - Arrows z value should be relative to the player.
+        - So the arrow looks good when shooting while runnign with cloud boots.
+
+    - Improve pits in the elder's basement
+
     - First Jade Champion encounter
         - Triggered if you try to enter the holy city before encountering her in the Summoner Ruins.
         - Warns you to stay away from the Spirit Gate
