--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -61,16 +61,25 @@ Graphics to Implement:
     Add damage effect for player hurt? (alttp doesn't have anything like this)
 
 Current tasks:
+
+    - Game slows down when rendering background animation
+        - Spread this out one frame at a time.
+        - Store set of up-to-date frames and clear this when checkToRedraw is set to true.
+        - Each time we call renderBackground frame we loop through all frames starting at the current frame and redraw 1 frame if necessary.
+        - Move tilesDrawn to AreaFrame
+        - Convert foregroundCanvas+Context to foregroundFrame: AreaFrame
+
     - Add lava bubble animations
         - Make them freeze into empty frames.
-    - Fix some ledges on edge of lava in crater prevent freezing lava as expected.
-    - Fix normal snakes can walk on lava
-        - Maybe turn them into fire snakes if they touch lava instead of stopping them.
 
     - Heavy objects
     - Pots
     - New cave pits
         - Use in Tomb+Elder basement
+
+
+    - Fix normal snakes can walk on lava
+        - Maybe turn them into fire snakes if they touch lava instead of stopping them.
 
     - First Jade Champion encounter
         - Triggered if you try to enter the holy city before encountering her in the Summoner Ruins.
