--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -66,6 +66,18 @@ Graphics to Implement:
 Current tasks:
     - On area creation run ambient effect creation 50-100 times with animation timers+ position advanced by 20ms-2000ms to simulate pre existing effects.
 
+    - Add entrance to the Vanara Dreamland to the Cocoon after the boss fight.
+        - Material world entrances: back of Tomb, lake teleporter, bottom of Cocoon, Helix Bridge
+        - Spirit world entrances: Fertility Temple, Helix Bridge + 2 more?
+        - Learn Teleportation after talking to the Spirit Tree
+            - Teleportation tutorial area required to leave
+        - NPC Vanara projections populate the dreamland
+        - For now use regular grass tiles + vanara plants and then see if using clouds for exterior boundaries gives it a more fantastic feel.
+        - Eventually we will want more Vanara ship/plant tiles here and the Village and for the Helix exterior.
+        - The dreamland will start small and expand as you save the Daughter Trees.
+            - In the Fertility Temple Vanara researchers have created a treatment to protect the Daughter Trees from the beetles cutting them off from the Spirit Tree.
+            - One of the crew on the Helix recommends visiting the temple to assist them.
+
     - First Jade Champion encounter
         - Triggered if you try to enter the holy city before encountering her in the Summoner Ruins.
         - Warns you to stay away from the Spirit Gate
